# compilation-linux

./: CMakeLists.txt  README.md  main-preprocessed.c  main.c  makefile  makefile.backup
Pico_Template/: CMakeLists.txt
Pico_Template/inc/: led.h
Pico_Template/src/: led.c
inc/: random.h
src/: random.c
